0.Apps/3. Kubernetes - Service_Pod/5.redisDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: coursek8s
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis
          image: redis
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
          command: ["redis-server"]
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
