0.Apps/3. Kubernetes - Service_Pod/6.redisService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: coursek8s
  name: redis-service
spec:
  type: ClusterIP
  selector:
    name: redis
  ports:
  - port: 6379
    targetPort: 6379
