0.Apps/3. Kubernetes - Service_Pod/9.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: coursek8s
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
      - http:
          paths:
              - pathType: Prefix
                path: /?(.*)
                backend:
                    service:
                      name: client-service
                      port: 
                        number: 8081
              # - path: /api/?(.*)
              #   backend:
              #       serviceName: server-service
              #       servicePort: 5000
